// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`middlewares/url \`method\` option 1`] = `
Object {
  "headers": Object {
    "Accept": "*/*",
  },
  "method": "GET",
  "signal": AbortSignal {},
}
`;

exports[`middlewares/url \`url\` option as string 1`] = `
Object {
  "body": "{\\"id\\":\\"1\\",\\"query\\":\\"\\",\\"variables\\":{}}",
  "headers": Object {
    "Accept": "*/*",
    "Content-Type": "application/json",
  },
  "method": "POST",
  "signal": AbortSignal {},
}
`;

exports[`middlewares/url \`url\` option as thunk 1`] = `
Object {
  "body": "{\\"id\\":\\"1\\",\\"query\\":\\"\\",\\"variables\\":{}}",
  "headers": Object {
    "Accept": "*/*",
    "Content-Type": "application/json",
  },
  "method": "POST",
  "signal": AbortSignal {},
}
`;

exports[`middlewares/url \`url\` option as thunk with Promise 1`] = `
Object {
  "body": "{\\"id\\":\\"1\\",\\"query\\":\\"\\",\\"variables\\":{}}",
  "headers": Object {
    "Accept": "*/*",
    "Content-Type": "application/json",
  },
  "method": "POST",
  "signal": AbortSignal {},
}
`;
